--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,8 @@ a:hover {
 
 
 .wrap {
-  max-width: 1440px;
+  max-width: 100%;
   margin: auto;
-  padding-top:2em;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
@@ -183,6 +182,7 @@ transition: transform .2s; /* Animation */
 .info ul{
   padding:0;
 }
+
 /* .author{
   text-align:left !important;
 }
@@ -434,7 +434,7 @@ transition: transform .2s; /* Animation */
 # Issues Section
 --------------------------------------------------------------*/
 .metadata{
-  /* width:12vw; */
+  width:12vw;
   background-color: #E5F6DF;
   padding: 2vh 1vw;
   display: flex;
